<resources>
    <string name="app_name">Don\'t Touch my phone</string>
    <string name="accelerometer_not_available">Accelerometer Sensor is not available</string>
    <string name="accept">Accept</string>
    <string name="activate">Activate</string>
    <string name="activated">Activated</string>
    <string name="add_email">Add Email</string>
    <string name="adjust_the_settings_to_control_volume_flashlight_and_vibration">Adjust the settings to control volume, flashlight, and vibration.</string>
    <string name="admin_permission_required">Permission must required</string>
    <string name="alarm_clock">Clock</string>
    <string name="alarm_lound">Alarm loud</string>
    <string name="alert_after_number_of_wrong_attempts">Alert after number of wrong attempts</string>
    <string name="allow">Allow</string>
    <string name="already_applied">Already Applied</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anti_pocket_detection">Anti Pocket Detection</string>
    <string name="app_name2">"Don't Touch MyPhone"</string>
    <string name="app_will_take_photo_on_wrong_try">The app will take a photo after a failed login attempt.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied">Applied</string>
    <string name="applied_successfully">Applied Successfully</string>
    <string name="apply">Apply</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure, you want to exit?</string>
    <string name="auto_ecpm">Auto CPM: $%s</string>
    <string name="baby_sound">Baby sound</string>
    <string name="before_activating_you_can_set_the_flashlight_volume_duration_as_you_like">Before activating, You can set the flashlight volume,duration as you like</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_service_notification">Intruder Selfie</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancel">Cancel</string>
    <string name="car_break">Car Break</string>
    <string name="car_horn">Car horn</string>
    <string name="cat_run">Cat Run</string>
    <string name="change_pin">"Change Pin"</string>
    <string name="charger_unplug_detection">Charger Unplug Detection</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="content_info_icon">Ad content info icon</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cow">Cow</string>
    <string name="custom_cta_ad_customisation_label">Custom CTA</string>
    <string name="custom_cta_button">Install</string>
    <string name="custom_cta_label">GET</string>
    <string name="cycle_bell">Cycle Bell</string>
    <string name="defaulter">Default</string>
    <string name="defaults">default</string>
    <string name="delete_this_intruder">Delete this Picture</string>
    <string name="detect_when_charger_is_unplugged_trigger_the_alarm_sound">Detect when the charger is unplugged and trigger an alarm sound.</string>
    <string name="detect_when_phone_is_remove_from_pocket">Detect when the phone is removed from the pocket.</string>
    <string name="detects_when_phone_is_remove_from_pocket">Detect when the phone is removed from the pocket.</string>
    <string name="device_main_permission">Device main permission</string>
    <string name="device_shake_service_notification">"Don't Touch Device"</string>
    <string name="disco_mode">Disco Mode</string>
    <string name="dog">DOG</string>
    <string name="don_t_touch_my_phone">"Don't Touch My Phone"</string>
    <string name="draw_overlay">Draw Overlay</string>
    <string name="duaration">Duration</string>
    <string name="elephant">Elephant</string>
    <string name="email_feedback">customer@begamob.com</string>
    <string name="email_intruder_location">Email Intruder Location</string>
    <string name="email_intruder_selfie">Email Intruder Selfie</string>
    <string name="enter_4_digit_pin">Enter 4 digit pin</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_to_stop_alarm">Enter Password to stop Alarm</string>
    <string name="error">"Error
"</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Exit</string>
    <string name="external_storage_permission">External storage Permission</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="flash_light">Flash Light</string>
    <string name="fortify_your_phone_fortress_with_don_t_touch_my_phone">"Fortify Your Phone Fortress with Don't Touch My Phone."</string>
    <string name="gcm_defaultSenderId">1081310746179</string>
    <string name="get_started">Get Started</string>
    <string name="give_camera_permission_for_the_indtuder_selfi_to_capture_the_image_who_is_trying_to_unlock_your_phone">Give Camera permission for the intruder self. to capture the image who is trying to unlock your phone</string>
    <string name="give_external_storage_permission_for_the_indtuder_selfi_to_capture_the_image_who_is_trying_to_unlock_your_phone">Give External Storage permission for the intruder selfie. to capture the image who is trying to unlock your phone</string>
    <string name="google_api_key">AIzaSyAGxtNIdPAviM-Bnv23f4TKIVuN_2QjN_Q</string>
    <string name="google_app_id">1:1081310746179:android:b57479bfb77f3dda98e6f6</string>
    <string name="google_application_id">ca-app-pub-5552221152553029~1459452449</string>
    <string name="google_crash_reporting_api_key">AIzaSyAGxtNIdPAviM-Bnv23f4TKIVuN_2QjN_Q</string>
    <string name="google_storage_bucket">pub-metasol-antitheft.appspot.com</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="hello">Hello</string>
    <string name="help">Help</string>
    <string name="help1">Don’t Touch My Phone</string>
    <string name="help1dis">Stop unauthorized people from using the phone. Get alerts on phone touch.</string>
    <string name="help2">Anti Pocket Detection</string>
    <string name="help2dis">Get alert on snatching or prevent people from using mobile.</string>
    <string name="help3">Intruder selfie</string>
    <string name="help3dis">Take selfie when someone try to unlock your phone.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hope_so_you_have_enjoyed_our_app_n_have_a_great_day">"Hope so you have enjoyed our app!
 Have a great day!"</string>
    <string name="horn">Horn</string>
    <string name="i_dislike_this_app">I Dislike this App</string>
    <string name="i_like_this_app">I Like this App</string>
    <string name="i_love_this_app">I Love this App</string>
    <string name="ia_str_video_error">"Connection was lost
cannot play video"</string>
    <string name="ia_video_app_info_text">App Info</string>
    <string name="ia_video_before_skip_format">Skip in (%d)</string>
    <string name="ia_video_install_now_text">Install Now</string>
    <string name="ia_video_instant_install_text">Instant Install</string>
    <string name="ia_video_skip_text">Skip Ad</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="instance_id">Instance id: %s</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="intruders">Intruders</string>
    <string name="invite_friend_to_help_them">Invite Friend to help them</string>
    <string name="item_view_role_description">Tab</string>
    <string name="key_count_down_timer">delay</string>
    <string name="key_fingerprinrVerification">fingerPrintVerification</string>
    <string name="key_flashlight">flashlight</string>
    <string name="key_internal_tune">internalTune</string>
    <string name="key_pin_verification">pinVerification</string>
    <string name="key_tune_type">tuneType</string>
    <string name="key_vibration">vibrate</string>
    <string name="languages">Languages</string>
    <string name="launguage">Language</string>
    <string name="lazy_cat">Lazy Cat</string>
    <string name="learn_more">Learn More</string>
    <string name="loading">Loading ...</string>
    <string name="location_permission_body">Access to Camera is required to capture photo who unlock phone detail.Please accept our permissions.</string>
    <string name="loin">Loin</string>
    <string name="pause">Pause</string>
    <string name="permission_denied_title">Permission</string>
    <string name="pin_summary_off">Any one can disable alarm</string>
    <string name="pin_summary_on">Alarm disable is protected by PIN</string>
    <string name="pin_title">Enable PIN</string>
    <string name="play">Play</string>
    <string name="please_allow_the_device_admin_permission_to_acess_this_feature">Please Allow the Device admin permission to access this feature</string>
    <string name="please_grant_the_following_permission_to_continue_the_dont_touch_my_phone_app">"Please Grant the following permission to continue the Don't touch my phone app"</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="project_id">pub-metasol-antitheft</string>
    <string name="provided_email">Provided Email:</string>
    <string name="rate_us">Rate Us</string>
    <string name="ring_mobile_when_phone_detect_when_whistle">Ring my mobile phone when it detects a whistle.</string>
    <string name="ringer_alarm_on_off">Ringer Alarm On/Off</string>
    <string name="ringtone">Ringtone</string>
    <string name="rooster">Rooster</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="scarry">Scary</string>
    <string name="search_menu_title">Search</string>
    <string name="searchbar_scrolling_view_behavior">com.google.android.material.search.SearchBar$ScrollingViewBehavior</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="senstivity">Sensitivity</string>
    <string name="service_started">Service Started.</string>
    <string name="service_stopped">Service Stopped.</string>
    <string name="setting">Settings</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="show_intruders">"Show
Intruders"</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="special_permission_in_android_that_allows_an_app_to_draw_on_top_of_other_apps_or_display_windows_that_overlay_the_screen">The Draw Overlay is special permission in Android that allows an app to draw on top of other apps or display windows that overlay the screen</string>
    <string name="this_action_contain_ads">This action contain Ads</string>
    <string name="new_pin">new pin</string>
</resources>