<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/screen_bg_color"
    android:layoutDirection="ltr">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/activateBtn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:padding="@dimen/_8sdp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        app:layout_constraintWidth_percent="0.22"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash_anim" />

    <TextView
        android:id="@+id/textView11"
        style="@style/ScreenTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activateBtn" />

    <TextView
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/fortify_your_phone_fortress_with_don_t_touch_my_phone"
        android:textColor="@color/body_text_main"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ProgressBar
        android:id="@+id/progressBar11"
        android:layout_width="50.0dip"
        android:layout_height="50.0dip"
        android:layout_marginBottom="30.0dip"
        android:backgroundTint="@color/white"
        android:indeterminateTint="@color/grey_color"
        android:secondaryProgressTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:fontFamily="@font/inter_medium"
        android:text="@string/this_action_contain_ads"
        android:textColor="@color/text_color_primary"
        android:textSize="14.0sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>