<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/bottom_sheet_back3"
    android:layoutDirection="ltr"
    android:padding="@dimen/_8sdp">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="12.0dip"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView50"
        style="@style/MainScreenHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.0dip"
        android:text="@string/draw_overlay"
        app:layout_constraintEnd_toEndOf="@+id/imageView25"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <TextView
        android:id="@+id/textView51"
        style="@style/NormalTextStyle"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginStart="18.0dip"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="8.0dip"
        android:layout_marginEnd="18.0dip"
        android:layout_marginRight="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/special_permission_in_android_that_allows_an_app_to_draw_on_top_of_other_apps_or_display_windows_that_overlay_the_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="35.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginEnd="35.0dip"
        android:background="@drawable/btn_gradient_bg_full_rounded"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_35sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_35sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/allow"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="35.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginEnd="35.0dip"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_35sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_35sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />
</androidx.constraintlayout.widget.ConstraintLayout>