<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layoutDirection="ltr">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="0.0dip"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="2.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="18.0dip"
                android:src="@drawable/change_pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/ScreenTitleStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.0dip"
                android:gravity="center"
                android:text="@string/enter_4_digit_pin"
                app:layout_constraintEnd_toEndOf="@+id/cv_yes"
                app:layout_constraintStart_toStartOf="@+id/cv_no"
                app:layout_constraintTop_toBottomOf="@+id/iv_img" />

            <EditText
                android:id="@+id/edt_new_pin"
                style="@style/LargeTextWithPrimaryTextColorStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.0dip"
                android:digits="1234567890qwertyuiopasdfghjkl.,mnbvcxz_"
                android:gravity="center"
                android:hint="@string/new_pin"
                android:inputType="numberPassword"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/cv_yes"
                app:layout_constraintStart_toStartOf="@+id/cv_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_no"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/stroke_round_corner_bg"
                android:elevation="0.0dip"
                app:layout_constraintBottom_toBottomOf="@+id/cv_yes"
                app:layout_constraintEnd_toStartOf="@+id/cv_yes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cv_yes">

                <TextView
                    android:id="@+id/tv_no"
                    style="@style/MediumTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_yes"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="18.0dip"
                android:layout_marginBottom="18.0dip"
                android:elevation="0.0dip"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="0.0dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cv_no"
                app:layout_constraintTop_toBottomOf="@+id/edt_new_pin">

                <TextView
                    android:id="@+id/tv_yes"
                    style="@style/MediumTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_gradient_bg_full_rounded"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>